# accudisc

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
bindings/python/: README.md
bindings/rust/: README.md
cli/: CMakeLists.txt  main.c
cmake/: accudisc.pc.in
docs/: ACCUDISC_RECOVERY.md  ATTRIBUTION.md  RECORDING_PLAN.md  RECOVERY.md  TODO.md  cli-machine-interface.md  guardian_public.asc  initial-assessment.md
docs/reference/: ATTRIBUTION.md  RECORDING_PLAN.md  RECOVERY.md  TODO.md  cli-machine-interface.md
docs/research/: .gitignore  disc-formats.md  hires-backward-compatible-audio.md
drivers/: CMakeLists.txt  README.md
drivers/plextor/: FEATURES.md  LICENSE.md  PROTOCOL.md  plextor.c
drivers/plextor/re-tools/: gigarec_ratemap.py  harvest_cdb.py  sgsend.c
include/accudisc/: accudisc.h  driver.h
reference/: README.md
src/: CMakeLists.txt  accudisc.c  device.c  internal.h
src/cdda/: crc16.c  crc16.h  index_map.c  rw.c  scan.c  subq.c
src/drive/: c2lag.c  c2lag.h  disc.c  disc.h  driver.c  features.c  media_atip_db.inc  media_db.c  offsets.c  offsets_db.inc  speeds.c
src/meta/: cdtext.c  cdtext_blob.c  cdtext_blob.h  cdtext_encode.c  cdtext_encode.h
src/mmc/: cdb.c  cdb.h  mmc.c  mmc.h
src/read/: engine.c  engine.h
src/toc/: fulltoc.c  session.c  toc.c  toc.h
src/transport/: sense.c  sgio.c  transport.h
src/write/: burn.c  cuesheet.c  discinfo.c  tocparse.c  wparams.c  write.h  write_api.c
tests/: CMakeLists.txt  test_alloc_even.c  test_audio_diff.c  test_c2lag.c  test_cdb.c  test_cdtext_blob.c  test_cdtext_encode.c  test_cuesheet.c  test_decode.c  test_disc.c  test_discinfo.c  test_index_map.c  test_map.c  test_media.c  test_resid.c  test_rotation.c  test_rw.c  test_sense.c  test_session.c  test_toc.c  test_toc_hostile.c  test_tocparse.c  test_tocsrc.c  test_version.c  test_write_intake.c  vectors.h
tests/data/: abba_t16_unknown_boundary.sub
tools/: README.md  bench_decode.c  gen_media_db.py  gen_offsets.py  mediaprobe.c  pregap.py  qdecode.py  rangeprobe.c  speedcheck.c  speedprobe.c  ss_variants.c
